[tool.poetry]
name = "wcs-project-696h"
version = "0.1.0"
description = "CSC696h project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.3.3"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
jupyterlab = "^3.1.18"
ipykernel = "^6.4.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
